--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>V4</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link
+    /> -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
-    />
+    /> -->
 
     <script defer src="/app.js"></script>
   </head>
